tests/ui/limits/issue-55878.stderr
error[E0080]: values of the type `[u8; usize::MAX]` are too big for the target architecture
  --> $DIR/issue-55878.rs:4:26
   |
LL |     println!("Size: {}", std::mem::size_of::<[u8; u64::MAX as usize]>());
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
note: inside `std::mem::size_of::<[u8; usize::MAX]>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
